crates/pg_syntax/tests/snapshots/postgres_regress/hash_func@37.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT v as value, hash_record_extended(v, 0)::bit(32) as extended0\nFROM   (VALUES (row(1, 'aaa')::hash_test_t2)) x(v);"
---
SelectStmt@0..119
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..17
    ColumnRef@7..8
      Ident@7..8 "v"
    Whitespace@8..9 " "
    As@9..11 "as"
    Whitespace@11..12 " "
    ValueP@12..17 "value"
  Ascii44@17..18 ","
  Whitespace@18..19 " "
  ResTarget@19..67
    TypeCast@19..53
      FuncCall@19..44
        Ident@19..39 "hash_record_extended"
        Ascii40@39..40 "("
        ColumnRef@40..41
          Ident@40..41 "v"
        Ascii44@41..42 ","
        Whitespace@42..43 " "
        AConst@43..44
          Iconst@43..44 "0"
      Ascii41@44..45 ")"
      Typecast@45..47 "::"
      TypeName@47..53
        Bit@47..50 "bit"
        Ascii40@50..51 "("
        AConst@51..53
          Iconst@51..53 "32"
    Ascii41@53..54 ")"
    Whitespace@54..55 " "
    As@55..57 "as"
    Whitespace@57..58 " "
    Ident@58..67 "extended0"
  Newline@67..68 "\n"
  From@68..72 "FROM"
  Whitespace@72..75 "   "
  Ascii40@75..76 "("
  RangeSubselect@76..117
    SelectStmt@76..111
      Values@76..82 "VALUES"
      Whitespace@82..83 " "
      Ascii40@83..84 "("
      List@84..111
        TypeCast@84..111
          RowExpr@84..96
            Row@84..87 "row"
            Ascii40@87..88 "("
            AConst@88..89
              Iconst@88..89 "1"
            Ascii44@89..90 ","
            Whitespace@90..91 " "
            AConst@91..96
              Sconst@91..96 "'aaa'"
          Ascii41@96..97 ")"
          Typecast@97..99 "::"
          TypeName@99..111
            Ident@99..111 "hash_test_t2"
    Ascii41@111..112 ")"
    Ascii41@112..113 ")"
    Whitespace@113..114 " "
    Alias@114..117
      Ident@114..115 "x"
      Ascii40@115..116 "("
      Ident@116..117 "v"
  Ascii41@117..118 ")"
  Ascii59@118..119 ";"

