crates/pg_syntax/tests/snapshots/postgres_regress/hash_func@41.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT hashfloat8('0'::float8) = hashfloat8('-0'::float8) AS t;"
---
SelectStmt@0..63
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..62
    AExpr@7..56
      FuncCall@7..29
        Ident@7..17 "hashfloat8"
        Ascii40@17..18 "("
        TypeCast@18..29
          AConst@18..21
            Sconst@18..21 "'0'"
          Typecast@21..23 "::"
          TypeName@23..29
            Ident@23..29 "float8"
      Ascii41@29..30 ")"
      Whitespace@30..31 " "
      Ascii61@31..32 "="
      Whitespace@32..33 " "
      FuncCall@33..56
        Ident@33..43 "hashfloat8"
        Ascii40@43..44 "("
        TypeCast@44..56
          AConst@44..48
            Sconst@44..48 "'-0'"
          Typecast@48..50 "::"
          TypeName@50..56
            Ident@50..56 "float8"
    Ascii41@56..57 ")"
    Whitespace@57..58 " "
    As@58..60 "AS"
    Whitespace@60..61 " "
    Ident@61..62 "t"
  Ascii59@62..63 ";"

