crates/pg_syntax/tests/snapshots/postgres_regress/hash_func@43.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT hashfloat4('NaN'::float4) = hashfloat8('NaN'::float8) AS t;"
---
SelectStmt@0..66
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..65
    AExpr@7..59
      FuncCall@7..31
        Ident@7..17 "hashfloat4"
        Ascii40@17..18 "("
        TypeCast@18..31
          AConst@18..23
            Sconst@18..23 "'NaN'"
          Typecast@23..25 "::"
          TypeName@25..31
            Ident@25..31 "float4"
      Ascii41@31..32 ")"
      Whitespace@32..33 " "
      Ascii61@33..34 "="
      Whitespace@34..35 " "
      FuncCall@35..59
        Ident@35..45 "hashfloat8"
        Ascii40@45..46 "("
        TypeCast@46..59
          AConst@46..51
            Sconst@46..51 "'NaN'"
          Typecast@51..53 "::"
          TypeName@53..59
            Ident@53..59 "float8"
    Ascii41@59..60 ")"
    Whitespace@60..61 " "
    As@61..63 "AS"
    Whitespace@63..64 " "
    Ident@64..65 "t"
  Ascii59@65..66 ";"

