crates/pg_syntax/tests/snapshots/postgres_regress/horology@146.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '2020-10-05'::timestamp > '2202020-10-05'::date as f;"
---
SelectStmt@0..60
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..59
    AExpr@7..54
      TypeCast@7..30
        AConst@7..19
          Sconst@7..19 "'2020-10-05'"
        Typecast@19..21 "::"
        TypeName@21..30
          Timestamp@21..30 "timestamp"
      Whitespace@30..31 " "
      Ascii62@31..32 ">"
      Whitespace@32..33 " "
      TypeCast@33..54
        AConst@33..48
          Sconst@33..48 "'2202020-10-05'"
        Typecast@48..50 "::"
        TypeName@50..54
          Ident@50..54 "date"
    Whitespace@54..55 " "
    As@55..57 "as"
    Whitespace@57..58 " "
    Ident@58..59 "f"
  Ascii59@59..60 ";"

