crates/pg_syntax/tests/snapshots/postgres_regress/horology@149.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '2020-10-05'::timestamptz > '2202020-10-05'::date as f;"
---
SelectStmt@0..62
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..61
    AExpr@7..56
      TypeCast@7..32
        AConst@7..19
          Sconst@7..19 "'2020-10-05'"
        Typecast@19..21 "::"
        TypeName@21..32
          Ident@21..32 "timestamptz"
      Whitespace@32..33 " "
      Ascii62@33..34 ">"
      Whitespace@34..35 " "
      TypeCast@35..56
        AConst@35..50
          Sconst@35..50 "'2202020-10-05'"
        Typecast@50..52 "::"
        TypeName@52..56
          Ident@52..56 "date"
    Whitespace@56..57 " "
    As@57..59 "as"
    Whitespace@59..60 " "
    Ident@60..61 "f"
  Ascii59@61..62 ";"

