crates/pg_syntax/tests/snapshots/postgres_regress/horology@152.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '4714-11-24 BC'::date::timestamptz;"
---
SelectStmt@0..42
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..41
    TypeCast@7..41
      TypeCast@7..28
        AConst@7..22
          Sconst@7..22 "'4714-11-24 BC'"
        Typecast@22..24 "::"
        TypeName@24..28
          Ident@24..28 "date"
      Typecast@28..30 "::"
      TypeName@30..41
        Ident@30..41 "timestamptz"
  Ascii59@41..42 ";"

